# GameEngine

./: .gitignore  CMakeLists.txt  Readme.md
Asset/Shaders/hlsl/: CMakeLists.txt  FabricPS.hlsl  FabricVS.hlsl  ToyCarPS.hlsl  cubeTexturePS.hlsl  cubeTextureVS.hlsl  main.cpp  main4PS.hlsl  main4VS.hlsl  mainPS.hlsl  mainVS.hlsl
Asset/Shaders/hlsl/ABeautifulGame/: Pawn_Body_White_VS.hlsl  Queen_Black_PS.hlsl
Asset/Shaders/hlsl/Algorithm/: BlinnPhongLighting_PS.hlsl  BlinnPhongLighting_VS.hlsl  CommonMath.hlsl  CommonMathDefines.hlsl  GaussBlur_CS.hlsl  GuassBlur_CS.hlsl  LambertGouraudLighting_PS.hlsl  LambertGouraudLighting_VS.hlsl  LambertLighting_PS.hlsl  LambertLighting_VS.hlsl  Lighting.hlsl  MyGuassBlur_CS.hlsl  ShaderInput.hlsl  VolumetricLight_PS.hlsl  VolumetricLight_VS.hlsl
Asset/Shaders/hlsl/Atmosphere/: AtmosphereDefine.hlsl  Atmosphere_PS.hlsl  Atmosphere_VS.hlsl  BaseScattering.hlsl
Asset/Shaders/hlsl/Cube/: Cube_PS.hlsl  Cube_VS.hlsl
Asset/Shaders/hlsl/Effects/: AtmosphereEffects_PS.hlsl
Asset/Shaders/hlsl/EnvironmentTest/: DielectricSpheresMat_PS.hlsl  DielectricSpheresMat_VS.hlsl
Asset/Shaders/hlsl/Overlay/: SeaSub_PS.hlsl  SeaSub_VS.hlsl  WaterDropsSub_PS.hlsl  WaterDropsSub_VS.hlsl
Asset/Shaders/hlsl/PCG/: Waves_PS.hlsl  Waves_VS.hlsl
Asset/Shaders/hlsl/PrecomputeAtmosphere/: AtmosphereParamHeader.hlsl  PrecomputeAtmosphere_PS.hlsl
Framework/: CMakeLists.txt  glTF.md
Framework/Algorithm/: ColorSpaceConversion.hpp  HuffmanTree.hpp
Framework/Common/: Allocator.hpp  AssetLoader.cpp  AssetLoader.hpp  BaseApplication.cpp  BaseApplication.hpp  Buffer.hpp  CMakeLists.txt  ColorSpaceConversion.hpp  FrameStructure.hpp  GfxConfiguration.h  GraphicsManager.cpp  GraphicsManager.hpp  Image.hpp  InputManager.cpp  InputManager.hpp  MemoryManager.hpp  Mesh.hpp  ParameterValuemap.hpp  PhysicsManager.cpp  Scene.cpp  Scene.hpp  SceneGraphSettings.h  SceneManager.cpp  SceneManager.hpp  SceneNode.hpp  SceneObject.cpp  SceneObject.hpp  SceneParser.cpp  cbuffer.h  glTF.md  main.cpp  portable.hpp  shader_base.h  utility.hpp
Framework/Common/glTF/: glTFParser.cpp  glTFParser.h  glTFProcessor.hpp  glTFStructures.h
Framework/Component/XMCamera/: XMCamera.cpp  XMCamera.h  XMCameraController.cpp  XMCameraController.h
Framework/Component/XMInput/: XMInput.h  XmInput.cpp
Framework/GeomMath/: CMakeLists.txt  Quaternion.h  Quaternion.hpp  XM_Functions.h  XM_Header.h  XM_Matrix3.h  XM_Matrix4.h  XM_Quaternion.h  XM_Scalar.h  XM_Transform.h  XM_Vector.h  base_math.hpp  geommath.hpp  half_float.hpp
Framework/Interface/: CMakeLists.txt  IApplication.hpp  IAssetLoader.hpp  IDispatchPass.hpp  IDrawPass.hpp  IDrawSubPass.hpp  IGameLogic.hpp  IGraphicsManager.hpp  IInputManager.hpp  IMemoryManager.hpp  IPass.hpp  IPhysicsManager.hpp  IRuntimeModule.hpp  ISceneManager.hpp  ISubPass.hpp  ImageParser.hpp  Interface.hpp  SceneParser.hpp
Framework/Manager/: AssetLoader.cpp  AssetLoader.hpp  BaseApplication.cpp  BaseApplication.hpp  BaseSceneNode.hpp  BaseSceneObject.hpp  GraphicsManager.cpp  GraphicsManager.hpp  InputManager.cpp  InputManager.hpp  LightManager.cpp  LightManager.h  MemoryManager.cpp  MemoryManager.hpp  PhysicsManager.cpp  PhysicsManager.hpp  SceneManager.cpp  SceneManager.hpp
Framework/PCG/: PCGCommonObject.cpp  PCGCommonObject.h  Waves.cpp  Waves.h
Framework/Parser/: BMP.hpp  DDS.hpp  GLTF.hpp  ImageParserHeader.h  JPEG.hpp  NC.hpp  OGEX.hpp  PNG.hpp  TGA.hpp  WAV.hpp
Framework/Pass/DrawPass/: BaseDrawPass.cpp  BaseDrawPass.hpp  ForwardGeometryPass.hpp  OverlayPass.hpp  PresentPass.hpp  ShadowMapPass.cpp  ShadowMapPass.hpp
Framework/Pass/DrawSubPass/: BaseSubPass.cpp  BaseSubPass.hpp  GaussBlurSubPass.cpp  GaussBlurSubPass.hpp  GeometrySubPass.cpp  GeometrySubPass.hpp  GuassBlurSubPass.cpp  GuassBlurSubPass.hpp  GuiSubPass.cpp  GuiSubPass.hpp  OverlaySubPass.cpp  OverlaySubPass.hpp  PresentSubPass.cpp  PresentSubPass.hpp  SkyboxSubPass.cpp  SkyboxSubPass.hpp  VolumetricLightSubPass.cpp  VolumetricLightSubPass.hpp
Framework/Physics/Bullet3Physics/: Bullet3PhysicsManager.cpp  Bullet3PhysicsManager.hpp
Framework/Physics/MyChemistry/: ChemistryActor.h  ChemistryBaseProperty.h  ChemistryBody.cpp  ChemistryBody.h  ChemistryManager.cpp  ChemistryManager.hpp  ChemistryStatus.hpp  ChemistryWorld.cpp  ChemistryWorld.h
Framework/Physics/PhysXPhysics/: PhysXPhysicsManager.cpp  PhysXPhysicsManager.hpp
Framework/SceneGraph/: Scene.hpp  SceneManager.cpp  SceneNode.hpp  SceneNodeCamera.hpp  SceneNodeGeometry.hpp  SceneNodeLight.hpp  SceneObject.cpp  SceneObject.hpp  SceneObjectCamera.hpp  SceneObjectGeometry.hpp  SceneObjectIndexArray.hpp  SceneObjectLight.hpp  SceneObjectMaterial.hpp  SceneObjectMesh.hpp  SceneObjectTexture.hpp  SceneObjectTransform.hpp  SceneObjectTypeDef.hpp  SceneObjectVertexArray.hpp
Platform/Windows/: CMakeLists.txt  D3d12Application.cpp  D3d12Application.hpp  WICImageLoader.cpp  WICImageLoader.h  WinUtility.cpp  WinUtility.h  WindowsApplication.cpp  WindowsApplication.hpp  helloengine_win.c
Platform/Windows/WinTEST/: helloengine_d2d.cpp
RHI/D3d/: CMakeLists.txt  CommonDefine.h  D3d12Config.hpp  D3d12GraphicsCommon.cpp  D3d12GraphicsManager.cpp  D3d12GraphicsManager.hpp  D3d12RHI.cpp  D3d12RHI.h  D3d_Helper.hpp  DDS_Compress_Decompress.hpp  DX12_Readme.md  GeometryStructure.cpp  GeometryStructure.h  GraphicsCore.cpp  GraphicsCore.h  GraphicsCoreInternal.cpp  GraphicsStructure.cpp  GraphicsStructure.h  MVPMatrix.md  RenderObject.cpp  RenderObject.h  ShaderConstants.h  ShaderSouce.cpp  ShaderSource.cpp  ShaderSource.h  StructureSettings.h  d3dx12.h  function.drawio
RHI/D3d/Core/: CMakeLists.txt  Color.cpp  Color.h  Common.h  D3dCommonDef.h  D3dGraphicsCoreManager.cpp  D3dGraphicsCoreManager.h  GraphicsCore.cpp  GraphicsCore.h  GraphicsCore.md  Utility.cpp
RHI/D3d/Core/Common/: Color.cpp  (+20 more)
RHI/D3d/D3dPCG/: D3dWaves.cpp  D3dWaves.h
Test/: AssetLoaderTest.cpp  CMakeLists.txt  OgexParserTest.cpp  PhysXTest.cpp  SceneObjectTest.cpp  TextureLoadTest.cpp  WAVTest.cpp
Viewer/: CMakeLists.txt  MyViewer.cpp  MyViewer.hpp  main.cpp
(+149 files in other folders)
