file(GLOB MYVIEWER_HEADER_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/*.h ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
file(GLOB MYVIEWER_SOURCE_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
source_group(include/ FILES ${MYVIEWER_HEADER_FILES})
source_group(src/ FILES ${MYVIEWER_SOURCE_FILES})

add_executable(MyEngineViewer 
${MYVIEWER_HEADER_FILES} ${MYVIEWER_SOURCE_FILES}
)
target_link_libraries(MyEngineViewer PlatformInterface Framework d3d12 dxgi d3dcompiler D3dRHI
${OPENGEX_LIBRARY} 
${OPENDDL_LIBRARY} 
${XG_LIBRARY} 
${ZLIB_DEBUG_LIBRARY} 
${WINPIX_DEBUG_LIBRARY})

if(DEBUG_FLAG EQUAL 1)
    target_link_libraries(MyEngineViewer 
    ${BULLETLINEARMATH_DEBUG_LIBRARY}
    ${BULLETDYNAMICS_DEBUG_LIBRARY}
    ${BULLETCOLLISION_DEBUG_LIBRARY})
elseif(DEBUG_FLAG EQUAL 0)
    target_link_libraries(MyEngineViewer 
    ${BULLETLINEARMATH_RELEASE_LIBRARY}
    ${BULLETDYNAMICS_RELEASE_LIBRARY}
    ${BULLETCOLLISION_RELEASE_LIBRARY})
endif()