file(GLOB_RECURSE COMMON_HEADER_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/*.h ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
 ${CMAKE_CURRENT_SOURCE_DIR}/../GeomMath/geommath.hpp )
source_group("Header Files" FILES ${COMMON_HEADER_FILES}) 

file(GLOB_RECURSE COMMON_SRC_LIST  ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/glTF/glTFParser.cpp)

add_library(Common ${COMMON_HEADER_FILES} ${COMMON_SRC_LIST})
