file(GLOB_RECURSE COMMON_HEADER_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/*.h ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
 ${CMAKE_CURRENT_SOURCE_DIR}/../GeomMath/geommath.hpp )
#source_group("Header Files" FILES ${COMMON_HEADER_FILES}) 

file(GLOB_RECURSE COMMON_SRC_LIST  ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

set(PARSER_HPP
${CMAKE_CURRENT_SOURCE_DIR}/../Parser/ImageParserHeader.h
${CMAKE_CURRENT_SOURCE_DIR}/../Parser/BMP.hpp
${CMAKE_CURRENT_SOURCE_DIR}/../Parser/GLTF.hpp
${CMAKE_CURRENT_SOURCE_DIR}/../Parser/OGEX.hpp
${CMAKE_CURRENT_SOURCE_DIR}/../Parser/JPEG.hpp
${CMAKE_CURRENT_SOURCE_DIR}/../Parser/PNG.hpp
${CMAKE_CURRENT_SOURCE_DIR}/../Parser/TGA.hpp
)

source_group(Parser FILES ${PARSER_HPP})

add_library(Common ${COMMON_HEADER_FILES} ${COMMON_SRC_LIST} ${PARSER_HPP})

if(DEBUG_FLAG EQUAL 1)
    target_link_libraries(Common 
    ${BULLETLINEARMATH_DEBUG_LIBRARY}
    ${BULLETDYNAMICS_DEBUG_LIBRARY}
    ${BULLETCOLLISION_DEBUG_LIBRARY})
elseif(DEBUG_FLAG EQUAL 0)
    target_link_libraries(Common 
    ${BULLETLINEARMATH_RELEASE_LIBRARY}
    ${BULLETDYNAMICS_RELEASE_LIBRARY}
    ${BULLETCOLLISION_RELEASE_LIBRARY})
endif()