#collect common files
file(GLOB_RECURSE COMMON_HEADER_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/*.h ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
file(GLOB_RECURSE COMMON_SRC_LIST  ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

#collect math calc files
file(GLOB COMMON_MATH_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/../GeomMath/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/../GeomMath/*.h)
file(GLOB COMMON_MATH_SRC ${CMAKE_CURRENT_SOURCE_DIR}/../GeomMath/*.cpp )
set(MATH_FILES
${COMMON_MATH_HEADER}
${COMMON_MATH_SRC}
)
source_group(Math FILES ${MATH_FILES})

#collect Parser files
set(PARSER_HPP
${CMAKE_CURRENT_SOURCE_DIR}/../Parser/ImageParserHeader.h
${CMAKE_CURRENT_SOURCE_DIR}/../Parser/BMP.hpp
${CMAKE_CURRENT_SOURCE_DIR}/../Parser/GLTF.hpp
${CMAKE_CURRENT_SOURCE_DIR}/../Parser/OGEX.hpp
${CMAKE_CURRENT_SOURCE_DIR}/../Parser/JPEG.hpp
${CMAKE_CURRENT_SOURCE_DIR}/../Parser/PNG.hpp
${CMAKE_CURRENT_SOURCE_DIR}/../Parser/TGA.hpp
${CMAKE_CURRENT_SOURCE_DIR}/../Parser/NC.hpp
${CMAKE_CURRENT_SOURCE_DIR}/../Parser/DDS.hpp
)
source_group(Parser FILES ${PARSER_HPP})

#collect Components files
file(GLOB_RECURSE COMPONENT_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/../Component/*.h)
file(GLOB_RECURSE COMPONENT_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/../Component/*.cpp)
set(COMPONENT_FILES
${COMPONENT_HEADER}
${COMPONENT_SOURCE}
)
source_group(Component FILES ${COMPONENT_FILES})


add_library(Common ${COMMON_HEADER_FILES} ${COMMON_SRC_LIST} ${PARSER_HPP} ${COMPONENT_FILES} ${MATH_FILES})

MESSAGE("DEBUG_FLAG")

if(DEBUG_FLAG EQUAL 1)
    target_link_libraries(Common 
    ${BULLETLINEARMATH_DEBUG_LIBRARY}
    ${BULLETDYNAMICS_DEBUG_LIBRARY}
    ${BULLETCOLLISION_DEBUG_LIBRARY})
elseif(DEBUG_FLAG EQUAL 0)
    target_link_libraries(Common 
    ${BULLETLINEARMATH_RELEASE_LIBRARY}
    ${BULLETDYNAMICS_RELEASE_LIBRARY}
    ${BULLETCOLLISION_RELEASE_LIBRARY})
endif()