file(GLOB WINDOWS_HEADER_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/*.h ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
file(GLOB WINDOWS_SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB_RECURSE EXCLUDE_WINDOWS_HEADER_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/*.h ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/*.hpp)
list(REMOVE_ITEM WINDOWS_HEADER_FILES  ${EXCLUDE_WINDOWS_HEADER_FILES} )


MESSAGE( STATUS "path :" ${CMAKE_CURRENT_SOURCE_DIR})
source_group("include" FILES ${WINDOWS_HEADER_FILES}) 
source_group("src" FILES ${WINDOWS_SRC_FILES}) 

add_library(PlatformInterface ${WINDOWS_HEADER_FILES} ${WINDOWS_SRC_FILES})
